# evalrs

./: Cargo.toml  Dockerfile-ci
.github/workflows/: ci.yaml
src/: errors.rs  evaluator.rs  main.rs
